--- a/index.html
+++ b/index.html
@@ -8,19 +8,129 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Streamlit Application</title>
+<meta name="description" content="Glyco Interactome Network - Interactive visualization of protein-protein interactions under different glycosylation conditions">
+
+<meta name="keywords" content="glycosylation, protein interactions, mass spectrometry, GAP-MS, bioinformatics">
+
+<meta name="author" content="Eva-1023">
+
+<title>Glyco Interactome Network</title>
+
+<!-- Favicon -->
+
+<link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🧬</text></svg>">
 
 <style>
 
-body, html {
+/* Reset and base styles */
+
+* {
 
 margin: 0;
 
 padding: 0;
 
+box-sizing: border-box;
+
+}
+
+body, html {
+
 height: 100%;
 
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+
+background-color: #f8f9fa;
+
 overflow: hidden;
+
+}
+
+/* Loading screen */
+
+.loading-screen {
+
+position: fixed;
+
+top: 0;
+
+left: 0;
+
+width: 100%;
+
+height: 100%;
+
+background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+
+display: flex;
+
+flex-direction: column;
+
+justify-content: center;
+
+align-items: center;
+
+z-index: 9999;
+
+transition: opacity 0.5s ease-out;
+
+}
+
+.loading-screen.hidden {
+
+opacity: 0;
+
+pointer-events: none;
+
+}
+
+.spinner {
+
+width: 50px;
+
+height: 50px;
+
+border: 5px solid rgba(255, 255, 255, 0.3);
+
+border-top: 5px solid white;
+
+border-radius: 50%;
+
+animation: spin 1s linear infinite;
+
+margin-bottom: 20px;
+
+}
+
+@keyframes spin {
+
+0% { transform: rotate(0deg); }
+
+100% { transform: rotate(360deg); }
+
+}
+
+.loading-text {
+
+color: white;
+
+font-size: 18px;
+
+font-weight: 500;
+
+}
+
+/* Main iframe container */
+
+.iframe-container {
+
+width: 100%;
+
+height: 100vh;
+
+position: relative;
+
+background-color: white;
 
 }
 
@@ -32,6 +142,104 @@ height: 100%;
 
 border: none;
 
+display: block;
+
+}
+
+/* Error message */
+
+.error-message {
+
+position: fixed;
+
+top: 50%;
+
+left: 50%;
+
+transform: translate(-50%, -50%);
+
+background: #f8d7da;
+
+color: #721c24;
+
+padding: 20px;
+
+border-radius: 8px;
+
+border: 1px solid #f5c6cb;
+
+max-width: 500px;
+
+text-align: center;
+
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+
+box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+display: none;
+
+}
+
+.error-message h3 {
+
+margin-bottom: 10px;
+
+color: #721c24;
+
+}
+
+.error-message p {
+
+margin-bottom: 15px;
+
+line-height: 1.4;
+
+}
+
+.retry-button {
+
+background: #dc3545;
+
+color: white;
+
+border: none;
+
+padding: 10px 20px;
+
+border-radius: 4px;
+
+cursor: pointer;
+
+font-size: 14px;
+
+transition: background-color 0.2s;
+
+}
+
+.retry-button:hover {
+
+background: #c82333;
+
+}
+
+/* Responsive design */
+
+@media (max-width: 768px) {
+
+.loading-text {
+
+font-size: 16px;
+
+}
+
+.error-message {
+
+margin: 20px;
+
+max-width: calc(100% - 40px);
+
+}
+
 }
 
 </style>
@@ -40,7 +248,217 @@ border: none;
 
 <body>
 
-<iframe src="https://glycointeractome-2024.streamlit.app/?embedded=true"></iframe>
+<!-- Loading screen -->
+
+<div class="loading-screen" id="loadingScreen">
+
+<div class="spinner"></div>
+
+<div class="loading-text">Loading Glyco Interactome Network...</div>
+
+</div>
+
+<!-- Error message -->
+
+<div class="error-message" id="errorMessage">
+
+<h3>⚠️ Application Loading Error</h3>
+
+<p>Unable to load the Glyco Interactome Network application. This might be due to:</p>
+
+<ul style="text-align: left; margin: 10px 0;">
+
+<li>Network connectivity issues</li>
+
+<li>The Streamlit application might be temporarily unavailable</li>
+
+<li>Browser compatibility issues</li>
+
+</ul>
+
+<button class="retry-button" onclick="retryLoading()">Retry Loading</button>
+
+</div>
+
+<!-- Main application iframe -->
+
+<div class="iframe-container">
+
+<iframe 
+
+id="mainIframe"
+
+src="https://glycointeractome-2024.streamlit.app/?embedded=true"
+
+title="Glyco Interactome Network Application"
+
+loading="lazy"
+
+allowfullscreen>
+
+</iframe>
+
+</div>
+
+<script>
+
+// Application loading and error handling
+
+let loadingTimeout;
+
+let retryCount = 0;
+
+const maxRetries = 3;
+
+function hideLoadingScreen() {
+
+const loadingScreen = document.getElementById('loadingScreen');
+
+if (loadingScreen) {
+
+loadingScreen.classList.add('hidden');
+
+setTimeout(() => {
+
+loadingScreen.style.display = 'none';
+
+}, 500);
+
+}
+
+}
+
+function showError() {
+
+hideLoadingScreen();
+
+document.getElementById('errorMessage').style.display = 'block';
+
+}
+
+function retryLoading() {
+
+if (retryCount < maxRetries) {
+
+retryCount++;
+
+document.getElementById('errorMessage').style.display = 'none';
+
+document.getElementById('loadingScreen').style.display = 'flex';
+
+document.getElementById('loadingScreen').classList.remove('hidden');
+
+// Reload the iframe
+
+const iframe = document.getElementById('mainIframe');
+
+iframe.src = iframe.src;
+
+// Set new timeout
+
+setupLoadingTimeout();
+
+} else {
+
+alert('Maximum retry attempts reached. Please check your internet connection and try refreshing the page.');
+
+}
+
+}
+
+function setupLoadingTimeout() {
+
+// Clear existing timeout
+
+if (loadingTimeout) {
+
+clearTimeout(loadingTimeout);
+
+}
+
+// Set timeout for loading (30 seconds)
+
+loadingTimeout = setTimeout(() => {
+
+showError();
+
+}, 30000);
+
+}
+
+// Initialize on page load
+
+document.addEventListener('DOMContentLoaded', function() {
+
+const iframe = document.getElementById('mainIframe');
+
+// Set up loading timeout
+
+setupLoadingTimeout();
+
+// Handle successful iframe load
+
+iframe.addEventListener('load', function() {
+
+clearTimeout(loadingTimeout);
+
+setTimeout(hideLoadingScreen, 1500); // Give a moment for the app to initialize
+
+});
+
+// Handle iframe errors
+
+iframe.addEventListener('error', function() {
+
+showError();
+
+});
+
+// Fallback: Hide loading screen after 45 seconds regardless
+
+setTimeout(() => {
+
+if (document.getElementById('loadingScreen').style.display !== 'none') {
+
+hideLoadingScreen();
+
+}
+
+}, 45000);
+
+});
+
+// Handle online/offline status
+
+window.addEventListener('online', function() {
+
+if (document.getElementById('errorMessage').style.display === 'block') {
+
+retryLoading();
+
+}
+
+});
+
+window.addEventListener('offline', function() {
+
+showError();
+
+});
+
+// Prevent right-click context menu on iframe (optional security measure)
+
+document.addEventListener('contextmenu', function(e) {
+
+if (e.target.tagName === 'IFRAME') {
+
+e.preventDefault();
+
+}
+
+});
+
+</script>
 
 </body>
 
